mocha/apps/matomo/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - matomo.mocha.thoughtless.eu
      secretName: matomo-tls
  rules:
    - host: matomo.mocha.thoughtless.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
